--- a/ingester/Cargo.toml
+++ b/ingester/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1.45.1", features = ["full"] }
 url = "2.5.4"
 reqwest = "0.12.18"
 serde = { version = "1.0.219", features = ["derive"] }
+dotenv = "0.15.0"
