--- a/ingester/Cargo.toml
+++ b/ingester/Cargo.toml
@@ -8,6 +8,9 @@ axum = "0.8.4"
 ngrok = "0.15.0"
 tokio = { version = "1.45.1", features = ["full"] }
 url = "2.5.4"
-reqwest = "0.12.18"
+reqwest = { version = "0.12.18", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 dotenv = "0.15.0"
+tower-http = { version = "0.6.4", features = ["cors"] }
+hyper = "1.6.0"
+serde_json = "1.0.140"
