--- a/pulse-server/Cargo.toml
+++ b/pulse-server/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.8.4", features = ["ws"] }
 ngrok = "0.15.0"
 tokio = { version = "1.45.1", features = ["full"] }
 url = "2.5.4"
@@ -21,3 +20,5 @@ tokio-util = "0.7.15"
 chrono = "0.4.41"
 dashmap = "6.1.0"
 once_cell = "1.21.3"
+axum = { version = "0.8", features = ["macros"] }
+feed-rs = "2.3.1"
